--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       </section>
     </main>
 
-    <script src="./src/gameLogic.js"></script>
-    <script src="./src/main.js"></script>
+    <script src="./gameLogic.js"></script>
+    <script src="./main.js"></script>
+    
   </body>
 </html>
